# CommissionEmulator

./: .gitignore  CMakeLists.txt  Commission.h  CommissionData.h  CommissionData.xlsx  Config.h  Emulator.c  Emulator.h  ExtractData.py  README.md  main.c
data/: AvailableFilterTag.yaml  CommissionData.xlsx  DetailedData.csv  FilterTranslationData.json  RawData.csv  SummarizedData.csv
devtool/: ExtractData.py  GenerateAvailableFilterTag.py  GenerateTranslationData.py
src/: CMakeLists.txt  Commission.h  CommissionData.h  Config.h  Controller.py  Emulator.c  Emulator.h  TypeDef.h  main.c
